# agentproxy

./: FEATURE_ROADMAP.md  README.md  gpt-5-nano.baseline_test.json  pyproject.toml
agentproxy/: cli.py
agentproxy/core/: base_handler.py  config.py  learner.py  pipeline.py  stats.py
agentproxy/handlers/: build.py  files.py  filesystem.py  git.py  grep.py  package.py  registry.py  test.py
agentproxy/proxy/: callback.py  compressor.py  server.py
benchmarks/: BENCHMARKS.md  README.md  comparison_rtk.md
benchmarks/cost/: report.md  run.py
benchmarks/latency/: run.py
benchmarks/swe/: agent.py  dataset.py  evaluate.py  run.py
benchmarks/swe/results/: predictions_baseline.jsonl  predictions_proxy.jsonl
benchmarks/swe/results_nano/: predictions_baseline.jsonl  predictions_proxy.jsonl
docs/: learning.md
tests/: test_handlers.py
