[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentproxy"
version = "0.1.0"
description = "Token compression proxy for LLM coding agents"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.40",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
agentproxy = "agentproxy.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
benchmark = [
    "tiktoken>=0.7",
    "swebench>=2.1",
    "datasets>=2.18",
    "openai>=1.30",
]
